install/install_log.txt
g++ -pedantic-errors -lpthread -pthread -std=c++11 -c ../codes/main.cpp
../codes/main.cpp: In function ‘int main()’:
../codes/main.cpp:278:32: error: ‘as’ was not declared in this scope
             next_level = false;as 1 0 0
                                ^~
../codes/main.cpp:278:32: note: suggested alternative: ‘abs’
             next_level = false;as 1 0 0
                                ^~
                                abs
Makefile:29: recipe for target 'main.o' failed
make: *** [main.o] Error 1
